migrator-tests/src/snapshots/migrator_tests__source_down::test_rollback_previous::{{closure}}__two_way___laxsingle field name change strategy: renamedb_state_1.snap
---
source: migrator-tests/src/lib.rs
expression: db_miration_schema_state
---
DbMigrationSchemaState {
    resources: DbInfo {
        analyzers: Analyzers(
            Info(
                {},
            ),
        ),
        functions: Functions(
            Info(
                {},
            ),
        ),
        params: Params(
            Info(
                {},
            ),
        ),
        scopes: Scopes(
            Info(
                {},
            ),
        ),
        tables: Tables(
            Info(
                {
                    "animal": DefineStatementRaw(
                        "DEFINE TABLE animal SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "crop": DefineStatementRaw(
                        "DEFINE TABLE crop SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "migration": DefineStatementRaw(
                        "DEFINE TABLE migration SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "planet": DefineStatementRaw(
                        "DEFINE TABLE planet SCHEMAFULL PERMISSIONS NONE",
                    ),
                },
            ),
        ),
        tokens: Tokens(
            Info(
                {},
            ),
        ),
        users: Users(
            Info(
                {},
            ),
        ),
    },
    migration_meta: [
        StreamLinedMigration {
            basename: Basename(
                "migration_12_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "0c01e74e3d0049692c667de8d5e437e0f57c7dc2e0900f16a158a928f94bc53b",
            ),
            checksum_down: Some(
                Checksum(
                    "7eefd526c19969d2329f170436b63860c7c11606e0f420b86f97b0f5e6e5475d",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_11_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: Some(
                Checksum(
                    "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_10_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "411ab60f7f2603da732055403cf13845a6355bb9db181ba8ee8d74be0baa6664",
            ),
            checksum_down: Some(
                Checksum(
                    "c2b0160e84425cd34ba70f768c54f5fd53a4d8ab3868d21bd72a57798f0ebed8",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_9_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "c2b0160e84425cd34ba70f768c54f5fd53a4d8ab3868d21bd72a57798f0ebed8",
            ),
            checksum_down: Some(
                Checksum(
                    "411ab60f7f2603da732055403cf13845a6355bb9db181ba8ee8d74be0baa6664",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_8_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "812b038accb8e6f4faf1ca5785dcd52eafe04253276a78562066c54e6a90da90",
            ),
            checksum_down: Some(
                Checksum(
                    "5cddc4807eb22b201f0570ac3f59b12fe10a3e7999df90f44c1d79bf4012cde9",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_7_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "11d98c740871216b4097896e37d3dab602107d97b8af27684afca245659689d8",
            ),
            checksum_down: Some(
                Checksum(
                    "e0c02e4b902fba690ba0afa9e4178ddfdf9183fb282b4a37e352c936dabb2134",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_6_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: Some(
                Checksum(
                    "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_5_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "6f052b7bec10f8d14738b0cf9908fd193d6ab430d7f1696f0e361b70f79dd7ae",
            ),
            checksum_down: Some(
                Checksum(
                    "be779aba93a10d4872f2cff1ceae44370cda1ce8376160e9655392f0089f1347",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_4_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "2d850089c51a49447395c7b5da3c2cad248644d7a649e2b3711c2d4510cd0ffc",
            ),
            checksum_down: Some(
                Checksum(
                    "e368572275ada21c90564df70f038773b31aea41730977e1998d2dc45d50fc6d",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_3_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "d1351230eb92fb39f3b39f1c865777c168b2388f69a0369add1a8e42e6282af6",
            ),
            checksum_down: Some(
                Checksum(
                    "8765ce3a35f63d5f46194c1e08a09deb6a70b8ca22ac9b84a7f646502a33b09c",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_2_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "8765ce3a35f63d5f46194c1e08a09deb6a70b8ca22ac9b84a7f646502a33b09c",
            ),
            checksum_down: Some(
                Checksum(
                    "00972e254dd896fc52e9ea8359a3c0f61fcbdbf52d4df7179a1b5b27ac7e054e",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_1_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "d664533a0c999e8c5b87fc6e165220fe5996f4e6c415b60faa68843ef4764668",
            ),
            checksum_down: Some(
                Checksum(
                    "1297b3600eaa5bf46b7cb0f2ef0ec816f722f2aac01dee04e648ec8533a3884d",
                ),
            ),
        },
    ],
}
